# Teapod-antivirus

./: README.md  papers.tex  src.tex
script/: security.MD
script/config/: CMakeLists.txt
script/get/: CMakeLists.txt
script/loader/: header.h
script/tools/anti-php/: admin php whitelist.yar  php whitelist.yar  php.yar  phpfinder.sh  scan.py  wordpress.yar
script/tools/syncronisation/: Python[defender].py  script.ps1  script.ps3  syncro.vbs  syncronisation.1
